# ThinMatrix

./: CMakeLists.txt
build-debug/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ThinMatrix.sln  ThinMatrix.vcxproj  ThinMatrix.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-debug/libs/assimp/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  cmake_install.cmake
build-debug/libs/glad/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
build-debug/libs/glfw/: ALL_BUILD.vcxproj  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-debug/libs/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glm.sln
build-debug/libs/stb_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  stb_image.sln  stb_image.vcxproj  (+1 more)
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ThinMatrix.sln  ThinMatrix.vcxproj  ThinMatrix.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
libs/stb_image/: CMakeLists.txt
res/Batman/: Batman.mtl
res/ChristmasTree/: ChristmasTree.mtl
res/Elf/: AnnoyingElfKeith.mtl
res/SantaHat/: santa hat.mtl
res/christmasfireplace/: christmasfireplace.mtl
res/cloud/: 0039_player00out.dae  0039_player00out.smd
res/sign/: kingeddysign.mtl
src/engineTester/: MainGameLoop.cpp
src/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Player.cpp  Player.h
src/models/: RawModel.cpp  RawModel.h  TexturedModel.cpp  TexturedModel.h
src/renderEngine/: DisplayManager.cpp  DisplayManager.h  EntityRenderer.cpp  EntityRenderer.h  Loader.cpp  Loader.h  MasterRenderer.cpp  MasterRenderer.h  ModelLoader.h  ModelLoder.cpp  TerrainRenderer.cpp  TerrainRenderer.h
src/shaders/: ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h  fragmentShader.glsl  terrainFragmentShader.glsl  terrainVertexShader.glsl  vertexShader.glsl
src/terrains/: Terrain.cpp  Terrain.h
src/textures/: ModelTexture.cpp  ModelTexture.h
src/toolbox/: Maths.cpp  Maths.h
(+79 files in other folders)
